--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
       <div class="productz">
         <div class="cardz">
           <img src="assets/imgs/box.png" draggable="false" alt="" />
-        <h3 class="price">€ 89.99</h3>
-          <a href="#" class="read-more-btn" href="products.html">Read More</a>
+        <h3 class="price">€ 95.99</h3>
+          <a class="read-more-btn" href="products.html">Purchase</a>
         </div>
         <div class="cardz">
           <img src="assets/imgs/spoofer.png" draggable="false" alt="" />
-          <h3 class="price">€ 100</h3>
-          <a href="#" class="read-more-btn" href="products.html">Read More</a>
+          <h3 class="price">€ 44.99</h3>
+          <a class="read-more-btn" href="products.html">Purchase</a>
         </div>
 
       </div>
@@ -265,8 +265,8 @@
         <div class="column">
           <div class="column-header">Contact Us</div>
           <ul>
-            <li class="footitem"><a href="/">Discord</a></li>
-            <li class="footitem"><a href="/">Telegram</a></li>
+            <li class="footitem"><a href="https://discord.gg/argons">Discord</a></li>
+            <!-- <li class="footitem"><a href="/">Telegram</a></li> -->
           </ul>
         </div>
         
@@ -282,7 +282,7 @@
         <div class="footer-right-column">
           <div class="column-header">Social Media</div>
           <ul>
-            <li class="footitem"><a href="/">Youtube</a></li>
+            <li class="footitem"><a href="https://www.youtube.com/channel/UCEKVg-Ysak6-DxlcHB1SEbg">Youtube</a></li>
             <li class="footitem"><a href="https://www.tiktok.com/@argonsoftware_?_t=8i5rhNfEOsi&_r=1">Tiktok</a></li>
           </ul>
         </div>
