--- a/products.html
+++ b/products.html
@@ -42,6 +42,7 @@
     <div id="loading-container">
         <img id="loading-logo" src="assets/imgs/logo.png" alt="Logo">
       </div>
+    <div class="blur-container"></div>
     <div id='app'></div>
     <script src="assets/scripts/products.js"></script>
     <footer class="footer">
@@ -64,8 +65,8 @@
             <div class="column">
                 <div class="column-header">Contact Us</div>
                 <ul>
-                    <li class="footitem"><a href="/">Discord</a></li>
-                    <li class="footitem"><a href="/">Telegram</a></li>
+                    <li class="footitem"><a href="https://discord.gg/argons">Discord</a></li>
+                    <!-- <li class="footitem"><a href="/">Telegram</a></li> -->
                 </ul>
             </div>
 
@@ -81,7 +82,7 @@
                 <div class="footer-right-column">
                     <div class="column-header">Social Media</div>
                     <ul>
-                        <li class="footitem"><a href="/">Youtube</a></li>
+                        <li class="footitem"><a href="https://www.youtube.com/channel/UCEKVg-Ysak6-DxlcHB1SEbg">Youtube</a></li>
                         <li class="footitem"><a
                                 href="https://www.tiktok.com/@argonsoftware_?_t=8i5rhNfEOsi&_r=1">Tiktok</a></li>
                     </ul>
