--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=0.95"/>
+    <meta property="og:title" content="Argon Softwares">
+    <meta property="og:description" content="Unlock the full potential of your games with Argon Softwares' optimization solutions. Enjoy smoother gameplay and enhanced graphics for games like Fortnite.">
+    <meta property="og:image" content="https://argonsoftware.xyz/android-chrome-192x192.png">
+    <meta property="og:url" content="https://argonsoftware.xyz/">
+    <meta name="description" content="Enhance your gaming experience with Argon Softwares' game optimization services. Unlock smoother gameplay and improved graphics for Fortnite and other popular games.">
+    <meta name="twitter:card" content="https://argonsoftware.xyz/android-chrome-192x192.png">
+    <meta name="twitter:title" content="Argon Softwares">
+    <meta name="twitter:description" content="Unlock the full potential of your games with Argon Softwares. Enjoy smoother gameplay and enhanced graphics for games like Fortnite.">
+    <meta name="twitter:image" content="https://argonsoftware.xyz/assets/imgs/logo.png">
+
     <link rel="stylesheet" href="assets/styles/styles.css"/>
     <link rel="stylesheet" href="assets/styles/scrollbar.css"/>
     <link rel="stylesheet" href="assets/styles/shop.css"/>
@@ -80,13 +90,7 @@
         <span>Welcome to a New Era of Cheating</span>
       </h1>
       <p>
-        Argon Software is a beacon of innovation in Cheats software
-        development, consistently delivering cutting-edge solutions with a
-        dedicated team. Renowned for excellence, they craft sophisticated,
-        user-centric applications, pushing the boundaries of what's possible.
-        Their robust problem-solving and commitment to staying ahead make them
-        a top choice for reliable and forward-thinking Cheat development
-        services.
+        ARGON SOFTWARE™ is made to improve your overall Gaming Experience, Help you hit your Shots again without Spending thousands of hours playing Aim Trainers. The Ultimate Solution for daily Gamers
       </p>
     </div>
 
@@ -128,7 +132,8 @@
         companies. All of our products are designed by ourselves and all have
         special codes.
       </p>
-      <button class="shopbtn">Shop Now</button>
+      <a href="/products.html"><button class="shopbtn">Shop Now</button></a>
+      
     </div>
     <hr style="width: 4px;background-color: transparent;border: none;height: 4px;position: relative;top: -15%;" id="Product">
     <div class="shops">
@@ -136,12 +141,12 @@
       <div class="productz">
         <div class="cardz">
           <img src="assets/imgs/box.png" draggable="false" alt="" />
-        <h3 class="price">€ 95.99</h3>
+        <h3 class="price">€ 6.99</h3>
           <a class="read-more-btn" href="products.html">Purchase</a>
         </div>
         <div class="cardz">
           <img src="assets/imgs/spoofer.png" draggable="false" alt="" />
-          <h3 class="price">€ 44.99</h3>
+          <h3 class="price">€ 4.99</h3>
           <a class="read-more-btn" href="products.html">Purchase</a>
         </div>
 
@@ -253,9 +258,9 @@
           Providing Budget game enhancement solutions since 2022.
         </p>
         <div class="social-icons">
-          <a href="/"><i class="ri-discord-fill"></i></a>
-          <a href="/"><i class="ri-facebook-circle-fill"></i></a>
-          <a href="/"><i class="ri-youtube-fill"></i></a>
+          <a href="https://discord.gg/argons" target="_blank"><i class="ri-discord-fill"></i></a>
+          <a href="https://www.tiktok.com/@argonsoftware_?_t=8i5rhNfEOsi&_r=1" target="_blank"><i class="ri-tiktok-fill"></i></a>
+          <a href="https://www.youtube.com/channel/UCEKVg-Ysak6-DxlcHB1SEbg" target="_blank"><i class="ri-youtube-fill"></i></a>
         </div>
         
         <p class="copyright">Developed & Designed by <a href="https://proxyxdz.netlify.app/">Proxy</a>. All rights reserved.</p>
@@ -265,7 +270,7 @@
         <div class="column">
           <div class="column-header">Contact Us</div>
           <ul>
-            <li class="footitem"><a href="https://discord.gg/argons">Discord</a></li>
+            <li class="footitem"><a href="https://discord.gg/argons" target="_blank">Discord</a></li>
             <!-- <li class="footitem"><a href="/">Telegram</a></li> -->
           </ul>
         </div>
@@ -282,8 +287,8 @@
         <div class="footer-right-column">
           <div class="column-header">Social Media</div>
           <ul>
-            <li class="footitem"><a href="https://www.youtube.com/channel/UCEKVg-Ysak6-DxlcHB1SEbg">Youtube</a></li>
-            <li class="footitem"><a href="https://www.tiktok.com/@argonsoftware_?_t=8i5rhNfEOsi&_r=1">Tiktok</a></li>
+            <li class="footitem"><a href="https://www.youtube.com/channel/UCEKVg-Ysak6-DxlcHB1SEbg" target="_blank">Youtube</a></li>
+            <li class="footitem"><a href="https://www.tiktok.com/@argonsoftware_?_t=8i5rhNfEOsi&_r=1" target="_blank">Tiktok</a></li>
           </ul>
         </div>
         <p class="copyrightmobile">Developed & Designed by <a href="https://proxyxdz.netlify.app/">Proxy</a>. All rights reserved.</p>
