--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=0.95"/>
     <meta property="og:title" content="Argon Softwares">
-    <meta property="og:description" content="Unlock the full potential of your games with Argon Softwares' optimization solutions. Enjoy smoother gameplay and enhanced graphics for games like Fortnite.">
+    <meta property="og:description" content="ARGON SOFTWARE™ is made to improve your overall Gaming Experience, Help you hit your Shots again without Spending thousands of hours playing Aim Trainers. The Ultimate Solution for daily Gamers">
     <meta property="og:image" content="https://argonsoftware.xyz/android-chrome-192x192.png">
     <meta property="og:url" content="https://argonsoftware.xyz/">
-    <meta name="description" content="Enhance your gaming experience with Argon Softwares' game optimization services. Unlock smoother gameplay and improved graphics for Fortnite and other popular games.">
+    <meta name="description" content="ARGON SOFTWARE™ is made to improve your overall Gaming Experience, Help you hit your Shots again without Spending thousands of hours playing Aim Trainers. The Ultimate Solution for daily Gamers">
     <meta name="twitter:card" content="https://argonsoftware.xyz/android-chrome-192x192.png">
     <meta name="twitter:title" content="Argon Softwares">
-    <meta name="twitter:description" content="Unlock the full potential of your games with Argon Softwares. Enjoy smoother gameplay and enhanced graphics for games like Fortnite.">
+    <meta name="twitter:description" content="ARGON SOFTWARE™ is made to improve your overall Gaming Experience, Help you hit your Shots again without Spending thousands of hours playing Aim Trainers. The Ultimate Solution for daily Gamers">
     <meta name="twitter:image" content="https://argonsoftware.xyz/assets/imgs/logo.png">
 
     <link rel="stylesheet" href="assets/styles/styles.css"/>
